# subxt-ios-demo

./: .gitignore  Cargo.toml  Makefile  README.md  asset_hub.json  polkadot.json
SubxtDemo/: BlockSubscriber.swift  ContentView.swift  SubxtDemoApp.swift  project.yml
src/: lib.rs
uniffi-bindgen/: Cargo.toml
