[package]
name = "subxt-uniffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]
name = "subxt_uniffi"

[dependencies]
subxt = { version = "0.50.0", default-features = false, features = [
    "light-client",
    "jsonrpsee",
    "native",
] }
uniffi = { version = "0.31", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
thiserror = "2"

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
